--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
         android:orientation="horizontal"
         android:padding="1dp"
         android:layout_margin="1dp"
-        android:background="@color/color_2"
-        >
+        android:background="@color/color_2">
 
         <Button
             android:id="@+id/btn_clear_log"
