--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,51 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="1dp"
         android:layout_margin="1dp"
-        android:background="@color/color_2">
+        android:background="@color/color_2"
+        android:orientation="horizontal"
+        android:padding="1dp">
 
         <Button
             android:id="@+id/btn_clear_log"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="CLEAR LOG"/>
+            android:text="CLEAR LOG" />
 
         <TextView
-            android:background="@color/color_2"
             android:id="@+id/textView"
-            android:gravity="center"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
-            android:textStyle="bold"
-            android:textSize="18sp"
+            android:layout_weight="1"
+            android:background="@color/color_2"
+            android:gravity="center"
+            android:text="SDR bridge"
             android:textColor="@color/white"
-            android:text="SDR bridge" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btn_about"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ABOUT"/>
+            android:text="ABOUT" />
 
     </LinearLayout>
 
     <ScrollView
+        android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:padding="1dp"
-        android:background="@color/color_3"
         android:layout_margin="1dp"
-        android:id="@+id/scrollview">
+        android:layout_weight="1"
+        android:background="@color/color_3"
+        android:padding="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -54,10 +54,10 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/log_data"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/color_1"
-                android:id="@+id/log_data"/>
+                android:textColor="@color/color_1" />
 
         </LinearLayout>
 
