--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,12 +5,18 @@
 </resources>-->
 
 <resources>
-<style name="Theme.SDRBridge" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-    <!-- Make system bars transparent -->
+<!--<style name="Theme.SDRBridge" parent="Theme.MaterialComponents.Light.DarkActionBar">-->
+<style name="Theme.SDRBridge" parent="Theme.Material3.DayNight.NoActionBar">
     <item name="android:statusBarColor">@android:color/transparent</item>
     <item name="android:navigationBarColor">@android:color/transparent</item>
-
-    <!-- Optional: Ensure content doesn't get cut off by keyboard -->
     <item name="android:windowSoftInputMode">adjustResize</item>
+
+    <item name="colorPrimary">@color/color_2</item>
+    <item name="colorPrimaryVariant">@color/color_3</item>
+    <item name="colorOnPrimary">@color/white</item>
+    <!-- Secondary brand color. -->
+    <item name="colorSecondary">@color/color_4</item>
+    <item name="colorSecondaryVariant">@color/color_5</item>
+    <item name="colorOnSecondary">@color/color_1</item>
 </style>
 </resources>
